[headless] Resize new WebContents to initial size when they are added.

Bug: 696439
Change-Id: Ib57bd3c95ce734d8a26c798f43fbfa94fcf3a67a
Reviewed-on: https://chromium-review.googlesource.com/574531
Commit-Queue: Eric Seckler <eseckler@chromium.org>
Reviewed-by: Alex Clarke <alexclarke@chromium.org>
Cr-Commit-Position: refs/heads/master@{#487095}
Former-commit-id: 82ad0e9a068d881a1c5207c62ee79d3d9a43e311