headless/lib/browser/headless_web_contents_impl.h
@@ -29,6 +29,7 @@ class Rect;
 }
 
 namespace headless {
+class HeadlessBrowser;
 class HeadlessBrowserImpl;
 class HeadlessTabSocketImpl;
 
@@ -43,6 +44,8 @@ class HEADLESS_EXPORT HeadlessWebContentsImpl
   ~HeadlessWebContentsImpl() override;
 
   static HeadlessWebContentsImpl* From(HeadlessWebContents* web_contents);
+  static HeadlessWebContentsImpl* From(HeadlessBrowser* browser,
+                                       content::WebContents* contents);
 
   static std::unique_ptr<HeadlessWebContentsImpl> Create(
       HeadlessWebContents::Builder* builder);
