headless/lib/headless_web_contents_browsertest.cc
@@ -9,6 +9,8 @@
 #include "base/base64.h"
 #include "base/json/json_writer.h"
 #include "base/strings/stringprintf.h"
+#include "build/build_config.h"
+#include "content/public/browser/web_contents.h"
 #include "content/public/test/browser_test.h"
 #include "headless/lib/browser/headless_web_contents_impl.h"
 #include "headless/public/devtools/domains/dom_snapshot.h"
@@ -105,6 +107,16 @@ IN_PROC_BROWSER_TEST_F(HeadlessWebContentsTest, WindowOpen) {
   // Mac doesn't have WindowTreeHosts.
   if (parent && child && parent->window_tree_host())
     EXPECT_NE(parent->window_tree_host(), child->window_tree_host());
+
+  gfx::Rect expected_bounds(0, 0, 200, 100);
+#if !defined(OS_MACOSX)
+  EXPECT_EQ(expected_bounds, child->web_contents()->GetViewBounds());
+  EXPECT_EQ(expected_bounds, child->web_contents()->GetContainerBounds());
+#else   // !defined(OS_MACOSX)
+  // Mac does not support GetViewBounds() and view positions are random.
+  EXPECT_EQ(expected_bounds.size(),
+            child->web_contents()->GetContainerBounds().size());
+#endif  // !defined(OS_MACOSX)
 }
 
 class HeadlessWindowOpenTabSocketTest : public HeadlessBrowserTest,
